objects/CustomSalesAgreement__c.object
<CustomObject>
    <fields>
        <fullName>AgreementName__c</fullName>
        <formula>SalesAgreement__r.Name</formula>
        <label>Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <formula>SalesAgreement__r.Account.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>SalesAgreement__r.EndDate</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Custom Sales Agreements</relationshipLabel>
        <relationshipName>Custom_Sales_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <formula>SalesAgreement__r.StartDate</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Custom Sales Agreement</label>
    <nameField>
        <displayFormat>CSA-{0000}</displayFormat>
        <label>Sales Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Sales Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>